# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: linter.yml
page_analyzer/: __init__.py  app.py  db_manager.py  parser.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
