[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vadim <vadimyaskiv89@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^22.0.0"
Flask = "^2.2.2"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
validators = "^0.20.0"
beautifulsoup4 = "^4.12.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
